[project]
name = "backend"
version = "0.1.0"
description = "Backend of Scalping trading advisor"
authors = [
    {name = "Saaransh",email = "saaranshvatsa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "yfinance (>=0.2.65,<0.3.0)",
    "deap (>=1.4.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

